Fixed radio margin spacing

--- a/styles/src/settings.css
+++ b/styles/src/settings.css
@@ -102,7 +102,7 @@
   font-size: 0.75rem;
 }
 
-.radio{
+.search-settings .radio {
   display: inline-block;
 }
 
